// Copyright Â© 2017 The Things Network Foundation, distributed under the MIT license (see LICENSE file)

syntax = "proto3";

package ttn.v3;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "github.com/TheThingsNetwork/ttn/pkg/ttnpb";

// Right is the enum that defines all the different rights to do something in
// the network.
enum Right {
  option (gogoproto.goproto_enum_prefix) = false;
  option (gogoproto.enum_stringer) = false;

  RIGHT_APPLICATION_DELETE = 0;
  RIGHT_APPLICATION_SETTINGS = 1;
  RIGHT_APPLICATION_COLLABORATORS = 2;

  RIGHT_GATEWAY_OWNER = 10;
}
